--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tsc": "npx tsc --module es2020"
   },
   "type": "module",
   "author": "",
@@ -12,9 +13,11 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.4"
+    "mongodb": "^3.6.4",
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@types/node": "^14.14.35",
     "nodemon": "^2.0.7"
   }
 }
