--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts"],
 }
