--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "npx tsc --module es2020",
     "lint": "npx eslint . --ext .js,.ts",
-    "lint:fix": "npx eslint . --ext .js,.ts --fix"
+    "lint:fix": "npx eslint . --ext .js,.ts --fix",
+    "start:server": "npm run tsc && node server/index.js"
   },
   "type": "module",
   "author": "",
@@ -29,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1"
   }
 }
