Add jest support

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,6 @@
   "compilerOptions": {
     "preserveConstEnums": true,
     "lib": ["ES2020"],
-    "target": "ES6",
     "module": "CommonJS",
     "moduleResolution": "Node",
     "allowSyntheticDefaultImports": true,
@@ -12,5 +11,5 @@
     "forceConsistentCasingInFileNames": true
   },
   "include": ["**/*"],
-  "exclude": ["node_modules", "**/*.spec.ts"],
+  "exclude": ["node_modules", "**/*.test.ts"],
 }
