--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "tsc": "npx tsc --module es2020",
+    "test": "npm run tsc && npx jest",
+    "tsc": "npx tsc",
     "lint": "npx eslint . --ext .js,.ts",
     "lint:fix": "npx eslint . --ext .js,.ts --fix",
     "start:server": "npm run tsc && node server/index.js"
   },
-  "type": "module",
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -20,16 +19,23 @@
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.21",
     "@types/node": "^14.14.35",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
   }
