--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         }
     },
     "rules": {
-        "import/extensions": 0
+        "import/extensions": 0,
+        "no-underscore-dangle": 0
     }
 }
