--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "tsc": "npx tsc",
     "lint": "npx eslint . --ext .js,.ts",
     "lint:fix": "npx eslint . --ext .js,.ts --fix",
-    "start:server": "npm run tsc && node server/index.js"
+    "start:server": "npm run tsc && node server/index.js",
+    "start:client": "cd client && npm run start"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,8 @@
     "@types/jest": "^26.0.21",
     "@types/mongodb": "^3.6.10",
     "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "babel-jest": "^26.6.3",
@@ -37,7 +40,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.3",
+    "jest": "^26.6.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
   }
