Add axios get all cards

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,5 @@
     "jsx": "react"
   },
   "include": ["**/*"],
-  "exclude": ["node_modules", "**/*.test.ts"],
+  "exclude": ["node_modules", "**/*.test.ts", "client/src"],
 }
