--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run tsc && npx jest",
+    "test": "npx jest",
     "tsc": "npx tsc",
     "lint": "npx eslint . --ext .js,.ts",
     "lint:fix": "npx eslint . --ext .js,.ts --fix",
@@ -25,6 +25,8 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/mongodb": "^3.6.10",
@@ -43,6 +45,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "jest": "^26.6.0",
     "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1"
   }
 }
