--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "tsc": "npx tsc",
     "lint": "npx eslint . --ext .js,.ts,.tsx --fix",
     "start:server": "npm run tsc && node server/index.js",
-    "start:client": "cd client && npm run start"
+    "start:client": "cd client && npm run start",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -42,6 +43,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^5.2.0",
     "jest": "^26.6.0",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.4",
