--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,5 +31,6 @@
     "rules": {
         "import/extensions": 0,
         "no-underscore-dangle": 0
-    }
+    },
+    "ignorePatterns": ["server/**/*.js"]
 }
