--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run tsc && npx jest",
+    "test": "npx jest --coverage",
     "tsc": "npx tsc",
-    "lint": "npx eslint . --ext .js,.ts",
-    "lint:fix": "npx eslint . --ext .js,.ts --fix",
-    "start:server": "npm run tsc && node server/index.js"
+    "lint": "npx eslint . --ext .js,.ts,.tsx --fix",
+    "start:server": "npm run tsc && node server/index.js",
+    "start:client": "cd client && npm run start",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
@@ -23,10 +25,14 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/mongodb": "^3.6.10",
     "@types/node": "^14.14.35",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.2",
     "@typescript-eslint/eslint-plugin": "^4.18.0",
     "@typescript-eslint/parser": "^4.18.0",
     "babel-jest": "^26.6.3",
@@ -37,8 +43,10 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "jest": "^26.6.3",
+    "husky": "^5.2.0",
+    "jest": "^26.6.0",
     "nodemon": "^2.0.7",
+    "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1"
   }
 }
