--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,22 +2,22 @@ version: 2.1
 orbs:
   node: circleci/node@3.0.0
 jobs:
+  lint: 
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - run: npm install
+      - run: npm run lint 
   tsc: 
     executor:
       name: node/default
     steps:
       - checkout
       - run: npm install
-      - run: npm run tsc 
-  unit-test:
-    executor:
-      name: node/default
-    steps:
-      - checkout
-      - run: npm install
-      - run: npm run start:server && npm run test
+      - run: npm run tsc
 workflows:
   test:
     jobs:
-      - tsc
+      - lint
       - unit-test
