--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
     steps:
       - checkout
       - run: npm install
-      - run: npm run start:server && npm run test
+      - run: npm run start:server & npm run test
 workflows:
   test:
     jobs:
