--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,16 @@ version: 2.1
 orbs:
   node: circleci/node@3.0.0
 jobs:
+  build:
+    docker:
+      - image: circleci/mongo:4.4.0
+    steps:
+      - checkout
+      - setup_remote_docker
+      - run:
+        name: MongoDB Install
+        commands: |
+          sudo apt-get install -y mongodb
   lint: 
     executor:
       name: node/default
