--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,10 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
-      - run: sudo apt-get install -y mongodb
+      - run:
+          name: MongoDB Install 
+          command: |
+            sudo apt-get install -y mongodb
   lint: 
     executor:
       name: node/default
