--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           command: |
             apt-get install -y mongodb-org
       - run: mongod --version
-      - run: mongod --port $DB_PORT
+      - run: mongod --port $DB_PORT &
   lint: 
     executor:
       name: node/default
@@ -29,22 +29,24 @@ jobs:
       - run: npm install
       - run: npm run tsc 
   unit-test:
+    docker:
+      - image: circleci/mongo:4.4.0
     executor:
       name: node/default
     steps:
       - checkout
+      - setup_remote_docker
+      - run:
+          name: MongoDB Install 
+          command: |
+            apt-get install -y mongodb-org
+      - run: mongod --version
+      - run: mongod --port $DB_PORT &
       - run: npm install
       - run: npm run start:server & npm run test
 workflows:
   test:
     jobs:
-      - build
-      - lint:
-          requires: 
-          - build
-      - tsc:
-          requires: 
-          - build
-      - unit-test:
-          requires: 
-          - build
+      - lint
+      - tsc
+      - unit-test
