--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,9 @@ jobs:
       name: node/default
     steps:
       - checkout
-      - run: npm install
+      - restore_cache:
+          keys: 
+            - node-cache
       - run: npm run lint 
   tsc: 
     executor:
@@ -42,20 +44,13 @@ jobs:
             - node-cache
       - run: npm run tsc 
   unit-test:
-    docker:
-      - image: circleci/mongo:4.4.0
     executor:
       name: node/default
     steps:
       - checkout
-      - setup_remote_docker
-      - run:
-          name: MongoDB Install 
-          command: |
-            apt-get install -y mongodb-org
-      - run: mongod --version
-      - run: mongod --port $DB_PORT &
-      - run: npm install
+      - restore_cache:
+          keys: 
+            - node-cache
       - run: npm run start:server & npm run test
 workflows:
   test:
