--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,8 @@ jobs:
       name: node/default
     steps:
       - checkout
+      - run: ls
+      - run: ls client/
       - restore_cache:
           keys: 
             - node-cache
