--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,9 +33,8 @@ jobs:
       name: node/default
     steps:
       - checkout
-      - restore_cache:
-          keys: 
-            - node-cache
+      - run: npm i
+      - run: cd client && npm i && ls && cd ../
       - run: ls
       - run: ls client/
       - run: npm run lint 
@@ -61,9 +60,9 @@ workflows:
   test:
     jobs:
       - install
-      - lint:
-          requires:
-          - install
+      - lint
+          # requires:
+          # - install
       - tsc:
           requires:
           - install
