--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,5 +32,5 @@
         "import/extensions": 0,
         "no-underscore-dangle": 0
     },
-    "ignorePatterns": ["server/**/*.js"]
+    "ignorePatterns": ["server/**/*.js", "testUtils/**/*.js"]
 }
