--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "npx jest -i",
     "tsc": "npx tsc",
     "lint": "npx eslint . --ext .js,.ts,.tsx --fix",
-    "start:server": "npm run tsc && node server/index.js",
+    "start:server": "npx ts-node server/index.ts",
     "start:client": "cd client && npm run start",
     "prepare": "husky install"
   },
@@ -20,8 +20,7 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.4",
-    "typescript": "^4.2.3"
+    "mongodb": "^3.6.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.10",
@@ -50,6 +49,7 @@
     "jest": "^26.6.0",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.4",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.3"
   }
 }
