--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testcafe": "^0.2.1",
     "husky": "^5.2.0",
     "jest": "^26.6.0",
     "nodemon": "^2.0.7",
