--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "airbnb"
+        "airbnb",
+        "plugin:testcafe/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -19,7 +20,8 @@
     "plugins": [
         "react",
         "@typescript-eslint",
-        "jest"
+        "jest",
+        "testcafe"
     ],
     "settings": {
         "import/resolver": {
@@ -32,5 +34,5 @@
         "import/extensions": 0,
         "no-underscore-dangle": 0
     },
-    "ignorePatterns": ["server/**/*.js", "testUtils/**/*.js"]
+    "ignorePatterns": ["server/**/*.js", "testUtils/**/*.js", "e2e/**/*.js"]
 }
