--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npx jest -i",
+    "test:e2e:firefox": "npx testcafe firefox e2e/**/*.ts",
     "tsc": "npx tsc",
     "lint": "npx eslint . --ext .js,.ts,.tsx --fix",
     "start:server": "npx ts-node server/index.ts",
@@ -45,9 +46,11 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testcafe": "^0.2.1",
     "husky": "^5.2.0",
     "jest": "^26.6.0",
     "nodemon": "^2.0.7",
+    "testcafe": "^1.14.2",
     "ts-jest": "^26.5.4",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
