--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "jsx": "react"
+    "jsx": "react",
+    "outDir": "./compiled/"
   },
   "include": ["**/*"],
   "exclude": ["node_modules", "**/*.test.ts", "client/src"],
