--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
     "settings": {
         "import/resolver": {
             "node": {
-                "extensions": [".js", ".ts", ".tsx"]
+                "extensions": [".js", ".ts", ".tsx", ".d.ts"]
             }
         }
     },
