* Add different boxes for flashcards (#11)
* Begin implementation of boxes

* Add boxes to card type

* Add box display on manage quizzes

* Fix bug where updated cards weren't stored in DB correctly

* Fix mongo tests

* Fix ViewQuizzesListItem tests

* Fix linting and unit tests

* Change card boxes based on correct/incorrect answers

* Create AddQuiz function for e2e tests

* Add basic studying e2e test

* Add tests for basic studying

* Update types

* Add dropdown and create StudyHomeListItem component

* Pass boxlevel to study component

* Add ability to do quizzes based on box levels

* Add E2E tests for checking boxes

* Fix linting errors

* Remove comments

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
     "settings": {
         "import/resolver": {
             "node": {
-                "extensions": [".js", ".ts", ".tsx"]
+                "extensions": [".js", ".ts", ".tsx", ".d.ts"]
             }
         }
     },
@@ -34,5 +34,5 @@
         "import/extensions": 0,
         "no-underscore-dangle": 0
     },
-    "ignorePatterns": ["server/**/*.js", "testUtils/**/*.js", "e2e/**/*.js"]
+    "ignorePatterns": ["server/**/*.js", "testUtils/**/*.js", "e2e/**/*.js", "compiled/"]
 }
