--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npx jest -i",
     "test:e2e:firefox": "npx testcafe firefox e2e/**/*.ts",
+    "test:e2e:chrome": "npx testcafe chrome e2e/**/*.ts",
     "tsc": "npx tsc",
     "lint": "npx eslint . --ext .js,.ts,.tsx --fix",
     "start:server": "npx ts-node server/index.ts",
@@ -28,8 +29,8 @@
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/mongodb": "^3.6.10",
@@ -48,10 +49,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testcafe": "^0.2.1",
     "husky": "^5.2.0",
-    "jest": "^26.6.0",
+    "jest": "^26.0.0",
     "nodemon": "^2.0.7",
-    "testcafe": "^1.14.2",
-    "ts-jest": "^26.5.4",
+    "testcafe": "^1.15.1",
+    "ts-jest": "^26.5.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
