--- a/package.json
+++ b/package.json
@@ -31,15 +31,15 @@
     "@babel/preset-typescript": "7.15.0",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "12.0.0",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.21",
-    "@types/mongodb": "^3.6.10",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "babel-jest": "^26.6.3",
+    "@types/express": "4.17.13",
+    "@types/jest": "27.0.1",
+    "@types/mongodb": "3.6.10",
+    "@types/node": "16.6.1",
+    "@types/react": "17.0.18",
+    "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "4.29.1",
+    "@typescript-eslint/parser": "4.29.1",
+    "babel-jest": "27.0.6",
     "eslint": "7.32.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-plugin-import": "2.24.0",
@@ -48,12 +48,12 @@
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-testcafe": "0.2.1",
-    "husky": "^5.2.0",
+    "husky": "7.0.1",
     "jest": "27.0.6",
-    "nodemon": "^2.0.7",
-    "testcafe": "^1.15.1",
+    "nodemon": "2.0.12",
+    "testcafe": "1.15.2",
     "ts-jest": "27.0.4",
     "ts-node": "10.2.0",
-    "typescript": "^4.2.3"
+    "typescript": "4.3.5"
   }
 }
