--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npx jest -i",
     "test:e2e:firefox": "npx testcafe firefox e2e/**/*.ts",
+    "test:e2e:chrome": "npx testcafe chrome e2e/**/*.ts",
     "tsc": "npx tsc",
     "lint": "npx eslint . --ext .js,.ts,.tsx --fix",
     "start:server": "npx ts-node server/index.ts",
@@ -15,44 +16,44 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
-    "axios": "^0.21.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongodb": "^3.6.4"
+    "@fortawesome/fontawesome-svg-core": "1.2.35",
+    "@fortawesome/free-solid-svg-icons": "5.15.3",
+    "@fortawesome/react-fontawesome": "0.1.14",
+    "axios": "0.21.1",
+    "dotenv": "8.2.0",
+    "express": "4.17.1",
+    "mongodb": "3.6.4"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.10",
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-typescript": "^7.13.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.21",
-    "@types/mongodb": "^3.6.10",
-    "@types/node": "^14.14.35",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "^7.22.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest": "^24.3.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-testcafe": "^0.2.1",
-    "husky": "^5.2.0",
-    "jest": "^26.6.0",
-    "nodemon": "^2.0.7",
-    "testcafe": "^1.14.2",
-    "ts-jest": "^26.5.4",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+    "@babel/cli": "7.14.8",
+    "@babel/core": "7.15.0",
+    "@babel/preset-env": "7.15.0",
+    "@babel/preset-typescript": "7.15.0",
+    "@testing-library/jest-dom": "5.14.1",
+    "@testing-library/react": "12.0.0",
+    "@types/express": "4.17.13",
+    "@types/jest": "27.0.1",
+    "@types/mongodb": "3.6.10",
+    "@types/node": "16.6.1",
+    "@types/react": "17.0.18",
+    "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "4.29.1",
+    "@typescript-eslint/parser": "4.29.1",
+    "babel-jest": "27.0.6",
+    "eslint": "7.32.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-import": "2.24.0",
+    "eslint-plugin-jest": "24.4.0",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.24.0",
+    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-testcafe": "0.2.1",
+    "husky": "7.0.1",
+    "jest": "27.0.6",
+    "nodemon": "2.0.12",
+    "testcafe": "1.15.2",
+    "ts-jest": "27.0.4",
+    "ts-node": "10.2.0",
+    "typescript": "4.3.5"
   }
 }
