--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-testcafe": "0.2.1",
-    "husky": "7.0.1",
+    "husky": "^7.0.1",
     "jest": "27.0.6",
     "nodemon": "2.0.12",
     "testcafe": "1.15.2",
