Add ability to create and study quizzes using the Leitner System (#30)
* Remove NavBar file, fix navbar CSS and create screencontainer

* Remove unused imports

* Add basic structure to study page with Mock data

* Update ViewQuizzesListItem to not render <ul> element when no cards have been added

* Add test to Study and update testUtils to include addQuiz

* Refactor to have StudyHome as its own component

* Add StudyQuestion page (buttons currently not working)

* Quiz Questions + Review (#5)

* Handle correct / incorrect button press on StudyHome

* Remove unused type

* Add StudyReviewListItem

* Add StudyReviewListItem

* Add tests for ListReviewItem

* Add test for Study

* Feature/tsnode (#7)

* Add TSNode

* Downgrade ts to allow linter to work

* Update .gitignore to ignore js for client files

* Create a type file to stop redefining types across multiple files (#8)

* Add types file and move quizType and cardType to it

* Move FormattedCard to type file

* Change cardType and quizType to Card and Quiz

* Fix spacing

* E2E tests (#9)

* Add e2e test for managing cards

* add tests for adding and deleting quizzes

* Fix linting issues

* Add ts-ignore for undefined types

* Remove process.env for axios

* Add e2e test for editing quiz and add further checks for existing tests

* Update e2e to ignore e2e/*.js files

* Update linting rules to ignore e2e/**/*.js files

* E2E (#10)

* Add e2e test for managing cards

* add tests for adding and deleting quizzes

* Fix linting issues

* Add ts-ignore for undefined types

* Remove process.env for axios

* Add e2e test for editing quiz and add further checks for existing tests

* Update e2e to ignore e2e/*.js files

* Update linting rules to ignore e2e/**/*.js files

* * Add different boxes for flashcards (#11)

* Begin implementation of boxes

* Add boxes to card type

* Add box display on manage quizzes

* Fix bug where upd

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,8 @@
     },
     "extends": [
         "plugin:react/recommended",
-        "airbnb"
+        "airbnb",
+        "plugin:testcafe/recommended"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
@@ -19,12 +20,13 @@
     "plugins": [
         "react",
         "@typescript-eslint",
-        "jest"
+        "jest",
+        "testcafe"
     ],
     "settings": {
         "import/resolver": {
             "node": {
-                "extensions": [".js", ".ts", ".tsx"]
+                "extensions": [".js", ".ts", ".tsx", ".d.ts"]
             }
         }
     },
@@ -32,5 +34,5 @@
         "import/extensions": 0,
         "no-underscore-dangle": 0
     },
-    "ignorePatterns": ["server/**/*.js", "testUtils/**/*.js"]
+    "ignorePatterns": ["server/**/*.js", "testUtils/**/*.js", "e2e/**/*.js", "compiled/"]
 }
