--- a/package.json
+++ b/package.json
@@ -37,23 +37,23 @@
     "@types/node": "16.6.1",
     "@types/react": "17.0.18",
     "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "4.29.1",
-    "@typescript-eslint/parser": "4.29.1",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "27.0.6",
-    "eslint": "7.32.0",
-    "eslint-config-airbnb": "18.2.1",
-    "eslint-plugin-import": "2.24.0",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest": "24.4.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.24.0",
-    "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testcafe": "0.2.1",
     "husky": "^7.0.1",
     "jest": "27.0.6",
     "nodemon": "2.0.12",
     "testcafe": "1.15.2",
-    "ts-jest": "27.0.4",
-    "ts-node": "10.2.0",
-    "typescript": "4.3.5"
+    "ts-jest": "^27.1.5",
+    "ts-node": "^10.2.0",
+    "typescript": "^4.3.5"
   }
 }
