--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -21,6 +21,6 @@
     "jsx": "react-jsx",
     "outDir": "compiled/"
   },
-  "include": ["src"],
+  "include": ["src/"],
   "exclude": ["node_modules", "**/*.test.ts"],
 }
