--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.0",
+    "eslint-plugin-jest": "^26.5.3",
     "express": "^4.18.1",
     "mongodb": "^4.5.0"
   },
@@ -22,8 +23,12 @@
     "@types/jest": "^27.5.0",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^17.0.31",
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
     "babel-jest": "^28.0.3",
-    "eslint": "^8.14.0",
+    "eslint": "^8.18.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^28.0.3",
     "ts-jest": "^28.0.0",
     "ts-node": "^10.7.0",
