--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,15 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "cypress:open": "npx cypress open"
+    "cypress:open": "npx cypress open",
+    "lint": "npx eslint . --ext .js,.ts,.tsx --fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cypress": "^10.7.0",
-    "testcafe": "^2.0.0"
+    "cypress": "^10.7.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.36.2",
+    "@typescript-eslint/parser": "^5.36.2",
+    "eslint": "^8.23.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "typescript": "^4.8.2"
   }
 }
