Add custom command for adding card

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ coverage/
 e2e/*.js
 e2e/cypress/screenshots
 e2e/cypress/videos
+e2e/cypress/downloads
 node_modules/
 server/**/*.js
 testUtils/**/*.js
