add study quiz flow cypress test

--- a/e2e/.eslintrc.json
+++ b/e2e/.eslintrc.json
@@ -5,13 +5,15 @@
         "cypress/globals": true
     },
     "extends": [
+        "typescript-eslint/recommended",
         "plugin:react/recommended",
         "airbnb"
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
-            "jsx": true
+            "jsx": true,
+            "tsx": true,
         },
         "ecmaVersion": "latest",
         "sourceType": "module"
@@ -21,7 +23,14 @@
         "@typescript-eslint",
         "cypress"
     ],
+    "settings": {
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".ts", ".tsx", ".d.ts"]
+            }
+        }
+    },
     "rules": {
-        "import/extensions": 0
+        "import/extensions": 0,
     }
 }
