--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
           name: npm install
           command: npm i && cd client && npm i && cd ../
       - save_cache:
-          key: node-cache-{{ .Branch }}
+          key: node-cache-client-{{ .Branch }}
           paths:
             - client/node_modules/
   install-server:
@@ -23,7 +23,7 @@ jobs:
           name: npm install
           command: npm i && cd server && npm i && cd ../
       - save_cache:
-          key: node-cache-{{ .Branch }}
+          key: node-cache-server-{{ .Branch }}
           paths:
             - server/node_modules/
   lint-client: 
@@ -33,7 +33,7 @@ jobs:
       - checkout
       - restore_cache:
           keys: 
-            - node-cache-{{ .Branch }}
+            - node-cache-client-{{ .Branch }}
       - run: cd client/ && npm run lint 
   tsc-client: 
     executor:
@@ -42,8 +42,26 @@ jobs:
       - checkout
       - restore_cache:
           keys: 
-            - node-cache-{{ .Branch }}
+            - node-cache-client-{{ .Branch }}
       - run: cd client/ && npm run tsc  
+  lint-server:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - restore_cache:
+          keys: 
+            - node-cache-server-{{ .Branch }}
+      - run: cd server/ && npm run lint
+  tsc-server: 
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - restore_cache:
+          keys: 
+            - node-cache-server-{{ .Branch }}
+      - run: cd server/ && npm run tsc  
 workflows:
   test:
     jobs:
@@ -54,3 +72,4 @@ workflows:
       - tsc-client:
           requires:
           - install-client
+      - install-server
