--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -30,5 +30,5 @@
         "import/extensions": 0,
         "no-underscore-dangle": 0
     },
-    "ignorePatterns": ["server/**/*.js", "testUtils/**/*.js", "e2e/**/*.js", "compiled/"]
+    "ignorePatterns": ["compiled/"]
 }
