--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,16 @@ jobs:
         - restore_cache:
             keys:
               - node-cache-e2e-{{ .Branch }}
+        - run: cd e2e/ && npm run lint  
+  tsc-e2e: 
+      executor:
+        name: node/default
+      steps:
+        - checkout
+        - restore_cache:
+            keys:
+              - node-cache-e2e-{{ .Branch }}
+        - run: cd e2e/ && npm run tsc  
 workflows:
   test:
     jobs:
