Break up into individual packages (#50)
* Demonolith server

* Update package for client and linting rules

* Get jest tests working for front-end

* Fix client linting issues

* Update linting and tests for server

* Condense list items into parent list component

* Condense studyhome

* Move StudyReviewListItem to StudyReview

* Remove root package and move node_modules to relevant directories

* Add cypress manage cards test

* Explicitly check for text

* Remove old manageCards test

* Add E2E linter

* Add custom command for adding card

* Begin adding manageQuizzes file

* Begin adding manageQuizzes file

* Add cypress manage quizzes test

* add study quiz flow cypress test

* Add quizBox cypress test

* Fix linting problems

* export individual selectors

* Remove pre-commit hook

* Add a constants file

* Update tests

* update readme

* Updated config.yml

* Updated config.yml

* Updated config.yml

* Updated config.yml

* Add tsc for e2e tests

* Update pre-push hook

* Update linter rules

* Updated config.yml

* Update pipeline to include e2e tsc

* update changelog.md

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 orbs:
   node: circleci/node@3.0.0
 jobs:
-  install:
+  install-client:
     executor:
       name: node/default
     steps:
@@ -11,35 +11,108 @@ jobs:
           name: npm install
           command: npm i && cd client && npm i && cd ../
       - save_cache:
-          key: node-cache-{{ .Branch }}
+          key: node-cache-client-{{ .Branch }}
           paths:
-            - node_modules/
             - client/node_modules/
-  lint: 
+  install-server:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - run:  
+          name: npm install
+          command: npm i && cd server && npm i && cd ../
+      - save_cache:
+          key: node-cache-server-{{ .Branch }}
+          paths:
+            - server/node_modules/
+  install-e2e:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - run:
+          name: npm install
+          command: cd e2e && npm i
+      - save_cache:
+          key: node-cache-e2e-{{ .Branch }}
+          paths:
+            - e2e/node_modules/
+  lint-client: 
     executor:
       name: node/default
     steps:
       - checkout
       - restore_cache:
           keys: 
-            - node-cache-{{ .Branch }}
-      - run: npm run lint 
-  tsc: 
+            - node-cache-client-{{ .Branch }}
+      - run: cd client/ && npm run lint 
+  tsc-client: 
     executor:
       name: node/default
     steps:
       - checkout
       - restore_cache:
           keys: 
-            - node-cache-{{ .Branch }}
-      - run: npm run tsc 
+            - node-cache-client-{{ .Branch }}
+      - run: cd client/ && npm run tsc  
+  lint-server:
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - restore_cache:
+          keys: 
+            - node-cache-server-{{ .Branch }}
+      - run: cd server/ && npm run lint
+  tsc-server: 
+    executor:
+      name: node/default
+    steps:
+      - checkout
+      - restore_cache:
+          keys: 
+            - node-cache-server-{{ .Branch }}
+      - run: cd server/ && npm run tsc  
+  lint-e2e:
+      executor:
+        name: node/default
+      steps:
+        - checkout
+        - restore_cache:
+            keys:
+              - node-cache-e2e-{{ .Branch }}
+        - run: cd e2e/ && npm run lint
+  tsc-e2e:
+      executor:
+        name: node/default
+      steps:
+        - checkout
+        - restore_cache:
+            keys:
+              - node-cache-e2e-{{ .Branch }}
+        - run: cd e2e/ && npm run tsc
 workflows:
   test:
     jobs:
-      - install
-      - lint:
+      - install-client
+      - lint-client:
           requires:
-          - install
-      - tsc:
+          - install-client
+      - tsc-client:
           requires:
-          - install
+          - install-client
+      - install-server
+      - lint-server:
+          requires:
+            - install-server
+      - tsc-server:
+          requires:
+            - install-server
+      - install-e2e
+      - lint-e2e:
+          requires:
+            - install-e2e
+      - tsc-e2e:
+          requires:
+            - install-e2e
