--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 .env
+.vscode/
+**/*.env
+client/**/*.js
+compiled/
+coverage/
+e2e/*.js
+e2e/cypress/screenshots
+e2e/cypress/videos
+e2e/cypress/downloads
 node_modules/
 server/**/*.js
-client/**/*.js
-e2e/*.js
 testUtils/**/*.js
-coverage/
-.vscode/
-compiled/
