--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,9 +18,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "outDir": "compiled/"
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src/"],
+  "exclude": ["node_modules", "**/*.test.ts"],
 }
