Update BE tests to use in-memory server

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,8 +1,7 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_SERVER_HOST=
 REACT_APP_SERVER_PORT=
-DB_URL=mongodb://<IP-ADDRESS>
-DB_PORT=
+MONGO_URL=mongodb://<IP-ADDRESS>
 DB_NAME=
 SERVER_HOST=
 SERVER_PORT=
