--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,6 +74,15 @@ jobs:
           keys: 
             - node-cache-server-{{ .Branch }}
       - run: cd server/ && npm run tsc  
+  unit-test-server:
+    executor:
+      name: name/default
+    steps:
+      - checkout
+      - restore_cache:
+        keys:
+          - node-cache-server-{{ .Branch }}
+      - run: cd server/ && npm run tsc
   lint-e2e:
       executor:
         name: node/default
@@ -109,6 +118,10 @@ workflows:
       - tsc-server:
           requires:
             - install-server
+      - unit-test-server:
+          requires:
+            - lint-server
+            - tsc-server
       - install-e2e
       - lint-e2e:
           requires:
