--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^4.5.0"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.5.0",
     "@types/mongodb": "^4.0.7",
