--- a/client/.env.example
+++ b/client/.env.example
@@ -1,11 +1,9 @@
 SKIP_PREFLIGHT_CHECK=true
 REACT_APP_SERVER_HOST=
 REACT_APP_SERVER_PORT=
-DB_URL=mongodb://<IP-ADDRESS>
-DB_PORT=
+MONGO_URL=mongodb://<IP-ADDRESS>
 DB_NAME=
 SERVER_HOST=
 SERVER_PORT=
 CLIENT_HOST=
 CLIENT_PORT=
-TEST_ENV=
